# VideoProjects

./: .gitignore  Formal_language_vccl_Protocol_002.MD  README.md  VideoProjects.pyproj  VideoProjects.sln  Video_content_creation_Protocol_001.MD  Video_content_creation_Protocol_001_eng.MD  output.txt  photoshop_render.py  render_opacity.avi  text_realtime_vfx.py  Алгоритм_создания_видео_контента.MD
VideoCube/VideoCubeCV/: CMakeLists.txt  ObfuscateNow.cpp  ObfuscateNow.h  UnityPipeline.qmodel  VideoCubeCV.pro  dialog.cpp  dialog.h  dialog.ui  keybertwrapper.cpp  keybertwrapper.h  libs.qmodel  libs_app7.qmodel  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_ver1.ui  print.cpp  print.h  res.qrc  shared.cpp  shared.h  sharedmemory.pro  stdout_module.cpp  stdout_module.h  timer.h  ui_dialog.h  ui_mainwindow.h  vccpparser.cpp  vccpparser.h  videoscreen.cpp  videoscreen.h
VideoCube/VideoCubeCV/SpeechAPI/: client_secret_1094778616973-v2vbp1mil814t3v3617lp86scv9s9a50.apps.googleusercontent.com.json  google_speech_recognition.py  google_tts.py  out.txt  run_speech_recognition.bat  sapi.bat  sapi_tts.py  text.txt
VideoCube/VideoCubeCV/keyBERT/: test_keyBERT.py
VideoCube/VideoCubeCV/libs/app7-master/: Makefile  README.md  app7.pro
VideoCube/VideoCubeCV/libs/app7-master/MazeMap/: Makefile  Makefile.Debug  Makefile.Release  MazeMap.pro  imageview.cpp  imageview.h  imageview_box_scan.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qlearning.cpp  qlearning.h  ui_mainwindow.h
VideoCube/VideoCubeCV/libs/app7-master/app7/: Makefile  Makefile.Debug  Makefile.Release  amimpath.cpp  animationdlg.cpp  animationdlg.h  animationdlg.ui  animsprite.cpp  animsprite.h  app7.pro  biped.cpp  biped.h  genecurvefitter.cpp  geometrictests.cpp  geometrictests.h  linuxoid.cpp  linuxoid.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  object_script.app7.Release  objectinspector.cpp  ploter.cpp  ref.cpp  ref.h  selsetsdlg.cpp  selsetsdlg.h  selsetsdlg.ui  terraindlg.cpp  terraindlg.ui  traj.ini  trajectorydialog.cpp  trajectorydialog.h  trajectorydialog.ui  ui_animationdlg.h  ui_mainwindow.h  ui_selsetsdlg.h  ui_terraindlg.h  ui_trajectorydialog.h  (+3 more)
VideoCube/VideoCubeCV/libs/app7-master/app7CoreLib/: Makefile  Makefile.Debug  Makefile.Release  app6corelib.h  app7CoreLib.pro  camera.cpp  cinput.cpp  cobjregistry.cpp  curve.cpp  gemobject.cpp  geometryobject.cpp  glcode.cpp  glwidget.cpp  glwidget2.cpp  material.cpp  maxcurve.cpp  muapi.cpp  object.cpp  object_script.libapp7CoreLib.Debug  object_script.libapp7CoreLib.Release  objectinspector.cpp  rectangle.cpp  selection.cpp  sky.cpp  var_parse.cpp
VideoCube/VideoCubeCV/libs/app7-master/app7Dyn/: Makefile  Makefile.Debug  Makefile.Release  app6dyn.cpp  app6dyn.h  app6dyn_global.h  app7Dyn.pro  car_autopilot.cpp  demper.cpp  fractalterrain.cpp  graviball.cpp  law.cpp  mazegen.cpp  mterrain.cpp  object_script.libapp7Dyn.Debug  object_script.libapp7Dyn.Release  plane.cpp  planesim.cpp  player.cpp  polet.cpp  spherevehiclecolision.cpp  terrain.cpp  terrvehicle.cpp  traj_gen.cpp  vehicle.cpp  Копия vehicle.cpp
VideoCube/VideoCubeCV/libs/app7-master/app7ML/: Makefile  Makefile.Debug  Makefile.Release  app7ML.pro  gradientdescent.cpp  gradientdescent.h  learning_fun.cpp  learning_fun.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mingamewidget.cpp  mingamewidget.h  moc_qcustomplot.cpp  netbp.cpp  netbp.h  nnwidget.cpp  nnwidget.h  qlearning.cpp  qlearning.h  reinf  reinf.pro  test.cpp  test.h  transfer_fun.cpp  transfer_fun.h  trash.cpp  trash.h  ui_mainwindow.h  values.txt
VideoCube/VideoCubeCV/libs/app7-master/docs/: app7_changelog.txt  app7_plans.MD
VideoCube/VideoCubeCV/libs/app7-master/include/: amimpath.h  animation.h  ascii3d.h  assoc_map.h  autopilot.h  ball.h  camera.h  car_autopilot.h  cinput.h  cmaininterface.h  cobjregistry.h  curve.h  demper.H  drawings2d.h  flags.h  fractalterrain.h  gemobject.h  gemobject_withVBO.h  genecurvefitter.h  geometry.h  geometryobject.h  glcode.h  glwidget.h  glwidget2.h  glwindow.h  graviball.h  grid.h  group.h  interp.h  law.h  (+45 more)
(+416 files in other folders)
